fix api transaction detail
