# docs/swagger.yaml
@@ -16,7 +16,7 @@ definitions:
       name:
         type: string
       price:
-        type: number
+        type: integer
     type: object
   entities.Transaction:
     properties:
@@ -27,7 +27,7 @@ definitions:
       productID:
         type: string
       total:
-        type: number
+        type: integer
       userID:
         type: string
       voucherID:
@@ -35,6 +35,8 @@ definitions:
     type: object
   entities.User:
     properties:
+      Balance:
+        type: integer
       id:
         type: string
       name:
@@ -57,7 +59,7 @@ definitions:
       type:
         type: string
       value:
-        type: number
+        type: integer
     type: object
 host: localhost:8080
 info:
@@ -321,6 +323,35 @@ paths:
       summary: Get a transaction by ID
       tags:
       - transactions
+  /transactions/user/{user_id}:
+    get:
+      description: Retrieve all transactions for a specific user
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.Transaction'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get Transaction Details by User
+      tags:
+      - transactions
   /users:
     get:
       description: Retrieve all users from the database
@@ -361,6 +392,49 @@ paths:
       summary: Create a user
       tags:
       - users
+  /users/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update user details such as name, points, and balance
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User data to be updated
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/entities.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User updated successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Failed to update user
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Update a user
+      tags:
+      - users
   /users/{id}/update:
     put:
       consumes:
@@ -393,6 +467,43 @@ paths:
           schema:
             $ref: '#/definitions/entities.User'
       summary: Update User Points
+      tags:
+      - users
+  /users/{id}/vouchers:
+    get:
+      description: Fetch all vouchers that a user has enough points to redeem and
+        that are not expired
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of available vouchers
+          schema:
+            items:
+              $ref: '#/definitions/entities.Voucher'
+            type: array
+        "400":
+          description: Invalid user ID
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Failed to retrieve vouchers
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get available vouchers for a user
       tags:
       - users
   /vouchers:
