# internal/interfaces/routes/router.go
@@ -14,7 +14,6 @@ func SetUpRoutes(r *gin.Engine,
 	productUseCase *usecases.ProductUseCase,
 	brandUseCase *usecases.BrandUseCase) {
 
-	// Initialize handlers
 	voucherHandler := handlers.NewVoucherHandler(voucherUseCase)
 	userHandler := handlers.NewUserHandler(userUseCase)
 	transactionHandler := handlers.NewTransactionHandler(transactionUseCase)
@@ -29,11 +28,13 @@ func SetUpRoutes(r *gin.Engine,
 		api.POST("/users", userHandler.CreateUser)
 		api.PUT("/users/:id/update", userHandler.UpdateUserPoints)
 		api.GET("/users", userHandler.GetAllUsers)
+		api.GET("/users/:id/vouchers", userHandler.GetAvailableVouchersForUser)
 
 		api.POST("/transactions", transactionHandler.CreateTransaction)
 		api.GET("/transactions/:id", transactionHandler.GetTransactionByID)
 		api.GET("/transactions", transactionHandler.GetAllTransactions)
 		api.DELETE("/transactions/:id", transactionHandler.DeleteTransaction)
+		api.GET("/transactions/user/:user_id", transactionHandler.GetTransactionDetailByUser)
 
 		api.POST("/products", productHandler.CreateProduct)
 		api.GET("/products", productHandler.GetAllProducts)
